# MRF

./: .gitignore  MRFSim.py  blochsim.py  fse.py  globals.py  main.py  param_obj.py  pcasl.py  pulses.py  pyproject.toml  setup.py  sim_obj.py  test.py
objects/: MRFSim.py  Params.py  SimObj.py  __init__.py  dict_manip.py  pb.py
objects/sim_blocks/: Custom.py  DeadAir.py  FSE.py  GRE.py  __init__.py  pCASL.py
objects/simulators/: np_blochsim_ljn.py
src/UM_MRF/: MRFSim.c  MRFSim.py  Params.c  __init__.c  dict_manip.c  pb.c  pb.py
src/UM_MRF.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/UM_MRF/sim_blocks/: BIR8.c  BIR8.py  Custom.c  Custom.py  DeadAir.c  DeadAir.py  FSE.c  FSE.py  GRE.c  GRE.py  SimObj.c  SimObj.py  __init__.py  pCASL.c  pCASL.py
src/UM_MRF/simulators/: np_blochsim_ljn.c
test/: test_1.py  test_2.py  test_3.py  test_4.py  test_5.py  test_6.py  test_7.py  test_8.py  test_globals.py
